...
    <string name="article_language_english">🇬🇧 English</string>
    <string name="share_article">Share article</string>
    <plurals name="reading_time_minutes">
        <item quantity="one">%d minute read</item>
        <item quantity="other">%d minutes read</item>
    </plurals>
    <string name="back">Back</string>
    <string name="loading">Loading</string>
    <string name="home_feed">Latest articles</string>
    <string name="download">Download</string>
    <string name="categories">Categories</string>
    <string name="authors">Authors</string>
    <string name="tags">Tags</string>
...
